# 3dmakeGUI

./: .gitignore  3dmake_gui.spec  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  STYLE.md  container.yaml  docker-compose.yml  mkdocs.yml  podman-compose.yml  pyproject.toml  update_system.py
.github/: FUNDING.yml
.github/workflows/: documentation.yml  release.yml
docs/: containers.md  contributing.md  getting-started.md  index.md  requirements.txt  security.md  style-guide.md
docs/api/: app.md  core.md  versioning.md
scripts/: bump_version.py
src/tdmake_gui_wrapper/: __init__.py  __main__.py  app.py  core.py
tests/: test_bump_version.py  test_core.py
