[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3dmake-gui-wrapper"
version = "2026.04.29"
description = "A NiceGUI-based GUI wrapper for tdeck/3dmake, designed for accessibility and terminal-based execution."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Michael Hunsaker, M.Ed., Ph.D.", email = "github@mail.hunsakerweb.com"},
]
license = {text = "Apache 2.0"}
keywords = ["3dmake", "nicegui", "accessibility", "gui", "3d-modeling", "blind", "screenreader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "nicegui>=1.4.0",
    # pywebview is required for native desktop window mode (ui.run(native=True))
    # and is bundled by PyInstaller.  Optional at import time but needed for
    # the compiled .exe / binary.
    "pywebview>=4.4.1",
]

[project.optional-dependencies]
viewer = [
    "trimesh>=4.0",
]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyinstaller>=6.0",
    "trimesh>=4.0",
]

[project.scripts]
# Creates a `3dmake-gui` command after `pip install` / `uv sync`
3dmake-gui = "tdmake_gui_wrapper.app:main"

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyinstaller>=6.0",
    "trimesh>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.8",
]

[tool.hatch.build.targets.wheel]
# NOTE: hatchling cannot handle package names starting with a digit.
# The Python package is named `tdmake_gui_wrapper` (no leading digit).
packages = ["src/tdmake_gui_wrapper"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
